Closed Bug 1303302 Opened 9 years ago Closed 9 years ago

Destructible check for refcounted type doesn't work with MSVC

Categories

(Core :: XPCOM, defect)

Unspecified
Windows
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla51
Tracking Status
firefox51 --- fixed

People

(Reporter: xidorn, Assigned: xidorn)

References

Details

Attachments

(1 file)

There is a static_assert check for ensuring that refcounted object doesn't have dangerous public destructor. But that check is only available with Clang and GCC. It should work with MSVC as well.
Comment on attachment 8791934 [details] Bug 1303302 - Add IsDestructible trait in TypeTraits and use it for refcounted type static check. https://reviewboard.mozilla.org/r/79204/#review77774
Attachment #8791934 - Flags: review?(nfroyd) → review+
Looks like that version doesn't work with GCC and Clang... I'll submit another version which is compatible with all.
Pushed by xquan@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/60d0e1dbddc0 Add IsDestructible trait in TypeTraits and use it for refcounted type static check. r=froydnj
Blocks: 1303522
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
Depends on: 1303602
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: