Bug 1303302 - Add IsDestructible trait in TypeTraits and use it for refcounted type static check. r=froydnj

MozReview-Commit-ID: G3YFhrJngq0